tests/ui/readme.stderr
error[E0594]: cannot assign to data in dereference of `S`
  --> tests/ui/readme.rs:21:5
   |
21 |     s.n += 1;
   |     ^^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `S`
